# Interview_tasks

./: .gitignore  parser_folders_tasks.py  parser_task.py  pyproject.toml
alembic/: env.py
alembic/versions/: 73049b4ca426_first.py
all_tasks/: all_tasks_Architecture (System Design).json  all_tasks_DB.json  all_tasks_GO.json  all_tasks_algo.json  all_tasks_product.json  all_tasks_project.json  all_tasks_python.json  all_tasks_sql.json
app/: main.py
app/api/: quesion.py  question.py
app/core/: base.py  config.py  db.py
app/crud/: answer.py  base.py  block.py  category.py  difficulty.py  question.py
app/models/: answer.py  answers.py  association.py  block.py  blocks.py  category.py  difficulty.py  question.py  questions.py
app/pages/: question.py
app/schemas/: answer.py  block.py  category.py  difficulty.py  question.py
app/templates/: base.html  category.html  form.html  index.html  navigation.html  random.html
